# Boxfish-Overflow-

./: Cargo.toml  README.md  credit.txt
.github/workflows/: rust.yml
assets/stages/: stage_0.toml  stage_1.toml  stage_2.toml  stage_3.toml  stage_4.toml  stage_5.toml  stage_6.toml  stage_7.toml
src/: aquarium.rs  boid.rs  boxfish.rs  camera.rs  main.rs  music.rs  prelude.rs  stage.rs  stage_manager.rs  styling.rs  tile.rs  ui.rs
src/aquarium/: construction.rs
src/boxfish/: camera.rs  construction.rs  movement.rs  register.rs  visual.rs
src/boxfish/movement/: collision.rs  expansion.rs  input.rs
src/stage/: construction.rs  resource.rs  visual.rs
src/stage/construction/: each_char.rs  each_line.rs
src/ui/: esc_menu.rs  game_clear.rs  main_menu.rs  operation_hint.rs  reset_exit_hint.rs
