[package]
name = "BoxFishOverflow"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.16.1", features = ["wav"]}
bevy_embedded_assets = "0.13.0"
image = "0.25.8"
itertools = "0.14.0"
rand = "0.9.2"
serde = "1.0.228"
toml = "0.9.8"
winit = "0.30.12"

[build-dependencies]
bevy_embedded_assets = "0.13.0"
